|
Quick Lists
|
|
Bug ID:
|
6677332
|
|
Votes
|
0
|
|
Synopsis
|
incorrect signatures for JNI methods in XWindow.c and XlibWrapper.c
|
|
Category
|
java:classes_awt
|
|
Reported Against
|
|
|
Release Fixed
|
7(b27)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
|
|
Submit Date
|
19-MAR-2008
|
|
Description
|
the following methods should return jint instead of int.
Java_sun_awt_X11_XWindow_getKeySymForAWTKeyCode()
Java_sun_awt_X11_XlibWrapper_XGrabPointer()
Java_sun_awt_X11_XlibWrapper_XGrabKeyboard()
Java_sun_awt_X11_XlibWrapper_XTranslateCoordinates()
Java_sun_awt_X11_XlibWrapper_XEventsQueued()
Posted Date : 2008-03-19 15:12:24.0
one more issue in src/solaris/native/sun/awt/MouseInfo.c
XQueryPointer() returns Bool, but not BOOL.
Posted Date : 2008-04-02 12:55:41.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
see description
Posted Date : 2008-03-19 15:16:24.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |