6677332: incorrect signatures for JNI methods in XWindow.c and XlibWrapper.c

Int replaced with jint in XWindow.c and WlibWrapper.c, and BOOL replaced with Bool in MouseInfo.c.

Reviewed-by: anthony